Band-aid fix for issue #5
Text getting cut off is not something I can tamper with right now with just css
maybe with @container breakpoints but even then it's tricky.

So for the time being I just made any overflow hidden

Closes #5

--- a/css/style.css
+++ b/css/style.css
@@ -214,6 +214,10 @@ button, .filter:hover { cursor: pointer;}
     border-radius: 25px;
     padding: 0px 19px;
     margin-right: 15px;
+
+    /* Kinda Fixes issue #5 */
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .filter-buttons .fa-solid {
